--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@stripe/stripe-js": "^8.5.2",
     "@supabase/supabase-js": "^2.83.0",
     "@vercel/analytics": "^1.6.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "stripe": "^20.0.0"
@@ -24,7 +24,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
